# codescout

./: Cargo.toml  LICENSE
src/: claude.rs  cli.rs  config.rs  error.rs  git.rs  ignore.rs  main.rs  prompt.rs  scanner.rs  symbols.rs
src/commands/: completion.rs  init.rs  mod.rs  rebuild.rs  scan.rs  status.rs  sync.rs  work.rs
src/shadow/: index.rs  layout.rs  map.rs  mod.rs
