[package]
name = "codescout"
version = "0.1.0"
edition = "2021"
description = "Shadow repository generator for AI-assisted codebase navigation"
license = "MIT"

[[bin]]
name = "codescout"
path = "src/main.rs"

[dependencies]
clap            = { version = "4", features = ["derive", "env"] }
clap_complete   = "4"
tokio           = { version = "1", features = ["full"] }
futures         = "0.3"
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
anyhow          = "1"
thiserror       = "2"
walkdir         = "2"
dirs            = "5"
ignore          = "0.4"
sha2            = "0.10"
hex             = "0.4"
tree-sitter              = "0.24"
tree-sitter-typescript   = "0.23"
tree-sitter-python       = "0.23"
streaming-iterator       = "0.1"
chrono          = { version = "0.4", features = ["serde"] }
indicatif       = "0.17"
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
